--- a/Synthesizer/Base.lproj/Main_iPhone.storyboard
+++ b/Synthesizer/Base.lproj/Main_iPhone.storyboard
@@ -914,11 +914,11 @@
                         <sections>
                             <tableViewSection id="FOP-hM-pQI">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="yjg-WU-aHf" detailTextLabel="U4l-yW-SPe" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="UMS-Mg-bkT">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="yjg-WU-aHf" detailTextLabel="U4l-yW-SPe" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="UMS-Mg-bkT">
                                         <rect key="frame" x="0.0" y="64" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UMS-Mg-bkT" id="XhD-h6-JcY">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Frequency" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="yjg-WU-aHf">
@@ -939,11 +939,11 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="t5Q-pP-SFi" detailTextLabel="Qi9-y9-aE6" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="uQW-tZ-GS9">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="t5Q-pP-SFi" detailTextLabel="Qi9-y9-aE6" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="uQW-tZ-GS9">
                                         <rect key="frame" x="0.0" y="124" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uQW-tZ-GS9" id="rMh-dz-UwP">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Waveform" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="t5Q-pP-SFi">
@@ -1051,6 +1051,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <segue destination="cHt-NB-Ct4" kind="push" identifier="VWWSegueAxisToFrequency" id="mI5-f3-xrw"/>
+                        <segue destination="kED-zO-S3x" kind="push" identifier="VWWSegueAxisToWaveform" id="yJc-Q6-4UX"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y9M-CC-LFI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1322,6 +1323,54 @@
             </objects>
             <point key="canvasLocation" x="3845" y="-1778"/>
         </scene>
+        <!--Waveform Parameters Table View Controller - Waveform-->
+        <scene sceneID="7oP-lF-lhG">
+            <objects>
+                <tableViewController id="kED-zO-S3x" customClass="VWWWaveformParametersTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="Y02-0A-XCe">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="checkmark" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="VWWWaveformTableViewCell" rowHeight="44" id="Ixe-LQ-kmR" customClass="VWWWaveformTableViewCell">
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ixe-LQ-kmR" id="1Hc-JJ-MZs">
+                                    <rect key="frame" x="0.0" y="0.0" width="281" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sine_256x256.png" translatesAutoresizingMaskIntoConstraints="NO" id="cDg-nI-Myq">
+                                            <rect key="frame" x="20" y="2" width="39" height="41"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sine" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Sw-3Q-XTO">
+                                            <rect key="frame" x="67" y="11" width="214" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="wavetypeImageView" destination="cDg-nI-Myq" id="tXw-N2-Uix"/>
+                                    <outlet property="wavetypeLabel" destination="1Sw-3Q-XTO" id="7YE-sV-Xuj"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="kED-zO-S3x" id="Cjh-fA-k4H"/>
+                            <outlet property="delegate" destination="kED-zO-S3x" id="CcQ-Ta-lfI"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Waveform" id="Yxn-WS-1CR"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k8V-kr-9VR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3444" y="-783"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nli-wb-uB2">
             <objects>
@@ -1341,6 +1390,9 @@
             <point key="canvasLocation" x="-592" y="223"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sine_256x256.png" width="256" height="256"/>
+    </resources>
     <color key="tintColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
